Add dynamic PORT configuration

--- a/.env
+++ b/.env
@@ -3,6 +3,8 @@ COMPOSE_PATH_SEPARATOR=:
 IMAGE_NAME=nginx:1.27-alpine
 CONTAINER_NAME=nginx-static-website
 
+PORT=
+
 VIRTUAL_HOST=
 LETSENCRYPT_HOST=
 LETSENCRYPT_EMAIL=
